--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
         <img src="img/Logoreal.png" alt="" class="logo">
         <!--Menu header-->
         <ul class="main-menu">
-            <a href="{{url(" / ")}}" method="get">
+            <a href="index.html">
                 <li class="menu-item">Home</li>
             </a>
-            <a href="{{url(" tienda ")}}" method="get">
+            <a href="views/fud.html">
                 <li class="menu-item">We are what we eat</li>
             </a>
-            <a href="{{url(" citas ")}}" method="get">
+            <a href="views/mig.html">
                 <li class="menu-item">Migrations and gender</li>
             </a>
-            <a href="{{url(" contacto ")}}" method="get">
+            <a href="views/wimen.html">
                 <li class="menu-item">Words to change the world</li>
             </a>
             </a>
-            <a href="{{url(" login ")}}" method="get">
+            <a href="views/game.html">
                 <li class="cta">Ponte a prueba!</li>
                 </form>
             </a>
@@ -100,19 +100,17 @@
         </div>
     </div>
     <footer>
-        <img src="img/imagenesWeb/logo.png" alt="" class="logo">
+        <img src="img/Logoreal.png" alt="" class="logo">
         <div class="social-icons-container">
-            <a href="https://www.twitter.com/petmanagement" class="social-icon"></a>
-            <a href="https://www.t.me/petmanagement" class="social-icon"></a>
+            <a href="https://www.instagram.com/lookingtheworld2024" target="_blank" class="social-icon"></a>
+            <a class="social-icon"></a>
         </div>
         <ul class="footer-menu-container">
             <li class="footer-item">Legal</li>
             <li class="footer-item">Cookies</li>
             <li class="footer-item">Privacidad</li>
-            <li class="footer-item">Shipping</li>
-            <li class="footer-item">Equipo</li>
         </ul>
-        <span class="copyright">&copy;2021, Pet Management. Todos los derechos reservados.</span>
+        <span class="copyright">&copy;2024, Looking The World. Albert Gutiérrez. Todos los derechos reservados.</span>
     </footer>
 </body>
 
