--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style-home.css">
     <link rel="icon" href="img/Logoreal.png">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Seymour+One&display=swap');
+    </style>
     <script src="js/box.js"></script>
     <title>Home</title>
 </head>
@@ -30,20 +33,20 @@
             </a>
             </a>
             <a href="views/game.html">
-                <li class="cta">Ponte a prueba!</li>
+                <li class="cta">Challenge!</li>
                 </form>
             </a>
         </ul>
         <script src="js/home.js"></script>
     </header>
     <div>
-        <img src="img/arbolesfondo.png" class="foto">
+        <img src="img/immigration-wiki_ver_2.png" class="foto">
     </div>
     <div class="row-c flex">
 
         <div class="column-5">
             <div>
-                <b>The objective of this website is to raise awareness about the problems that exist in our society, such as our alimentation, migration or violence. Explore the website to learn about these topics and don't forget to try to answer all the questions in the
+                <b class="seymour-one-regular">The objective of this website is to raise awareness about the problems that exist in our society, such as our alimentation, migration or violence. Explore the website to learn about these topics and don't forget to try to answer all the questions in the
                 challenge!</b>
             </div>
         </div>
@@ -59,19 +62,16 @@
                     <div class="mySlides fade">
                         <div class="numbertext">1 / 3</div>
                         <img src="img/imagen1.png" style="width:100%">
-                        <div class="text">Caption Text</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">2 / 3</div>
                         <img src="img/imagen2.png" style="width:100%">
-                        <div class="text">Caption Two</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">3 / 3</div>
                         <img src="img/imagen4.png" style="width:100%">
-                        <div class="text">Caption Three</div>
                     </div>
 
                     <!-- Next and previous buttons -->
